flowlog-build/tests/errors/typechecker/head_narrowing_without_cast.dl
.type UserId <: number
.decl Plain(x: number)
.decl OnlyUsers(u: UserId)
.input Plain(IO="file", filename="Plain.csv", delimiter=",")
.output OnlyUsers
OnlyUsers(x) :- Plain(x).
